#:schema https://json.schemastore.org/cargo.json
[package]
name    = "skiplist"
version = "0.5.0"

authors     = ["JP-Ellis <josh@jpellis.me>"]
description = "Skiplist implementation in Rust for fast insertion and removal, including a normal skiplist, ordered skiplist, and skipmap."
license     = "MIT"
readme      = "README.md"

categories = ["data-structures"]
keywords   = ["collection", "skiplist", "sorted"]

documentation = "https://docs.rs/skiplist"
homepage      = "https://jpellis.me/projects/rust-skiplist/"
repository    = "https://github.com/JP-Ellis/rust-skiplist/"

edition = "2018"

[badges]
codecov = { repository = "JP-Ellis/rust-skiplist", branch = "master", service = "github" }

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name    = "main"
