#:schema https://json.schemastore.org/cargo.json

[package]
name = "skiplist"
version = "0.5.0"
edition = "2024"
rust-version = "1.89"
description = "Skiplist implementation in Rust for fast insertion and removal, including a normal skiplist, ordered skiplist, and skipmap."
documentation = "https://docs.rs/skiplist"
readme = "README.md"
homepage = "https://jpellis.me/projects/rust-skiplist/"
repository = "https://github.com/JP-Ellis/rust-skiplist/"
license = "MIT"
keywords = ["collection", "skiplist", "sorted"]
categories = ["data-structures"]

  [package.metadata]
    [package.metadata.docs.rs]
    rustdoc-args = [
      "--html-in-header",
      ".cargo/katex.header.html",
      "--html-after-content",
      ".cargo/katex.script.html",
      "--html-in-header",
      ".cargo/mermaid.header.html",
      "--html-after-content",
      ".cargo/mermaid.script.html",
    ]

[[bench]]
harness = false
name = "skip_list"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
rand = "0.10"
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1.42.2"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
rstest = "0.26.1"

[badges]
codecov = { branch = "master", repository = "JP-Ellis/rust-skiplist", service = "github" }

[lints]
  [lints.rust]
  future-incompatible = "warn"
  missing_docs = "warn"
  warnings = "warn"

  [lints.rustdoc]
  missing-crate-level-docs = "warn"

  [lints.clippy]
  # I prefer enabling all lints and then silencing the ones I don't care about
  cargo = { level = "warn", priority = -1 }
  complexity = { level = "warn", priority = -1 }
  correctness = { level = "warn", priority = -1 }
  pedantic = { level = "warn", priority = -1 }
  perf = { level = "warn", priority = -1 }
  restriction = { level = "warn", priority = -1 }
  style = { level = "warn", priority = -1 }
  suspicious = { level = "warn", priority = -1 }

  arbitrary_source_item_ordering = "allow"
  blanket-clippy-restriction-lints = "allow"
  default_numeric_fallback = "allow"
  else_if_without_else = "allow"
  impl_trait_in_params = "allow"
  implicit_return = "allow"
  min_ident_chars = "allow"
  missing_trait_methods = "allow"
  non_ascii_literal = "allow"
  panic_in_result_fn = "allow"  # https://github.com/rust-lang/rust-clippy/issues/14056
  pattern_type_mismatch = "allow"
  pub_with_shorthand = "allow"
  question_mark_used = "allow"
  ref_patterns = "allow"
  self_named_module_files = "allow"
  separated_literal_suffix = "allow"
  similar_names = "allow"
  single_call_fn = "allow"
  single_char_lifetime_names = "allow"
  std_instead_of_alloc = "allow"
  std_instead_of_core = "allow"
  string_add = "allow"
  unreachable = "allow"
  unused_trait_names = "allow"
